--- a/main.css
+++ b/main.css
@@ -93,25 +93,12 @@ header {
 
 /* settings */
 
-.settings {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 100%;
+.settings, .search {
     height: 100%;
-    width: 100%;
     background: linear-gradient(100deg, #0652D0, #4F8AEA), no-repeat;
-    z-index: 3;
 }
 
-.settings .measure {
+.measure, .sities-list {
     position: relative;
     top: 3em;
-}
-
-/* settings actions */
-
-.settings-active {
-    display: block;
-    left: 0;
 }
